--- a/hashlips_nft_minting_dapp-1.0.1/public/config/theme.css
+++ b/hashlips_nft_minting_dapp-1.0.1/public/config/theme.css
@@ -1,8 +1,8 @@
 :root {
-  --primary: #ebc908;
+  --primary: #2b151a0d;
   --primary-text: #1a1a1a;
-  --secondary: #ff1dec;
+  --secondary: #fd3a67;
   --secondary-text: #ffffff;
   --accent: #505050;
-  --accent-text: #ffffff;
+  --accent-text: #e3e3e3;
 }
