adjust_background_image

--- a/hashlips_nft_minting_dapp-1.0.1/public/config/theme.css
+++ b/hashlips_nft_minting_dapp-1.0.1/public/config/theme.css
@@ -1,8 +1,8 @@
 :root {
-  --primary: #2b151a0d;
+  --primary: #FECD1A;
   --primary-text: #1a1a1a;
   --secondary: #fd3a67;
   --secondary-text: #ffffff;
   --accent: #505050;
-  --accent-text: #e3e3e3;
+  --accent-text: #f4f4f4;
 }
