--- a/hashlips_nft_minting_dapp-1.0.1/public/config/theme.css
+++ b/hashlips_nft_minting_dapp-1.0.1/public/config/theme.css
@@ -4,5 +4,5 @@
   --secondary: #fd3a67;
   --secondary-text: #ffffff;
   --accent: #505050;
-  --accent-text: #f4f4f4;
+  --accent-text: #ffffff;
 }
